Fix payment section overflow

--- a/chabadofparkland.css
+++ b/chabadofparkland.css
@@ -35,8 +35,7 @@
 
 #id_17,
 #sponsorElements,
-#personalInfo,
-#id_13 {
+#personalInfo {
     background-image: url(https://chabadofparkland.com/media/images/1251/eTUf12514209.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -47,6 +46,38 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+#id_13 {
+    background-image: url(https://chabadofparkland.com/media/images/1251/eTUf12514209.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 600px) {
+    #sponsorElements .form-label-left {
+        padding: 0;
+        margin: 0;
+    }
+    #sponsorElements :not(td)>.form-sub-label-container {
+        margin-bottom: 4px;
+    }
+    #sponsorElements .form-line {
+        padding: 0;
+        margin: 0;
+    }
+    #sponsorElements .form-label-left label {
+        font-size: 14px;
+    }
+    #sponsorElements, #personalInfo {
+        height: 375px;
+    }
 }
 
 #id_17 button {
